--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="imagenes/logo.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/6063594dfc.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -24,23 +27,20 @@
   </nav>
   <div class="intro">
 
-    <h2 class="mt-5 titulo">ESTUDIANTE DE DESARROLLO FULLSTACK JAVA EN GENERATION</h2>
-    <h3>Yo diseño y codifico cosas simples pero bonitas, y amo lo que hago.</h3>
+    <h2 class="mt-5 titulo">DESARROLLADORA FULLSTACK JAVA </h2>
+    <h3>Yo diseño y codifico cosas simples pero bonitas y amo lo que hago.</h3>
     <div id="about" class="about">
       <div class="texto-about">
+        <br>
         <h3>Hola, soy Angélica</h3>
         <h4>
-          Soy estudiante de desarrollo de software, me gusta mucho el desarrollo
-          frontend y estoy desarrollando mis hábilidades blandas y técnicas. Soy nueva en la industria pero mi
-          entusiasmo
-          y
-          dedicación me llevarán a seguir ampliando mi conocimiento y explorar nuevas tecnologías.
+          Estudié en Generation Colombia y seguí capacitándome con un enfoque en Linux,Docker y Kubernetes, actualmente estoy preparándome para la certificación CKAD.
         </h4>
       </div>
-      <img class="imagen-principal" src="imagenes/foto.jpg" alt="">
     </div>
     <!-- Acá se cierra el div   -->
   </div>
+  <br>
   <h4>He aplicado las siguientes tecnologías:</h4>
   <section>
     <div class="contTecnologias">
@@ -119,7 +119,7 @@
         </div>
       </div>
   </section>
-
+   <br>
   <hr>
   <div id="experiencias" class="experiencia">
     <h3>Entre mis más recientes experiencias</h3>
@@ -127,23 +127,30 @@
       <div class="Hackathon">
         <h4>Hackathon 1 de Generation</h4>
         <img class="hack" src="imagenes/hackathon.png">
-        <p class="hackathon">Maravilloso proyecto en el cuál junto con mis compañeros de equipo creamos una landing
+        <p class="hackathon"> Maravilloso proyecto en el cuál junto con mis compañeros de equipo creamos una landing
           page sobre venta de cosméticos en la cuál se manejó HTML,CSS y Bootstrap.</p>
-        <br>
+      </div> 
+
+      <div class="boutique">
+        <h4>La Boutique de las Flores</h4>
+        <img class="boutique" src="imagenes/boutique.png">
+        <p class="boutique">Proyecto en el que trabajé desarrollando un sistema de pedidos online para una
+          tienda de flores, optimizando la gestión de productos y pedidos.</p>
+      </div>
+      <div class="experiencia-texto">
         <p>Lo que me falta en experiencia, lo compenso con mi actitud positiva, mi capacidad para aprender rápidamente
           y mi determinación para enfrentar nuevos desafíos. Me emociona tener la oportunidad de contribuir en
-          proyectos innovadores y colaborar con equipos apasionados.
+          proyectos innovadores y colaborar con equipos apasionados.</p>
           <br>
-          ¡Gracias por visitar mi portafolio! Si te interesa que trabajemos juntos o si tienes alguna sugerencia
-          ¡Contáctame!.
-        </p>
+        <p>¡Gracias por visitar mi portafolio! Si te interesa que trabajemos juntos o si tienes alguna sugerencia
+          ¡Contáctame!.</p>
       </div>
-    </div>
+  </div>
     <br>
     <footer id="contacto">
       <h2>Viviendo, aprendiendo y aumentando de nivel cada día.</h2>
       <ul class="redes">
-        <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/angelica-velosa-developer/"><i class="fa-brands fa-linkedin"></i></a></li>
         <li><a href="mailto:velosaangelica@gmail.com"><i class="fa-regular fa-envelope"></i></a></li>
         <li><a href="https://wa.me/+573212734873" target="_blank"><i class="fa-brands fa-whatsapp"></i></a></li>
       </ul>
